<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signup_title"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtformal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="#F64E60"
            android:text=""
            android:textAlignment="center"
            android:textColor="#F64E60"
            android:textColorHighlight="#F64E60"
            android:textSize="15sp" />



        <EditText
            android:id="@+id/editTextemail"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="47dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputstyle"
            android:ems="10"
            android:hint="@string/signup_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/gray"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="#F64E60"
            android:textColor="#F64E60"
            android:textColorHighlight="#F64E60"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/editTextusername"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputstyle"
            android:ems="10"
            android:hint="@string/signup_username"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="#F64E60"
            android:textColor="#F64E60"
            android:textColorHighlight="#F64E60"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/editTextpwd"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/inputstyle"
            android:ems="10"
            android:hint="@string/signup_pwd"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/gray"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txtpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:shadowColor="#F64E60"
            android:textColor="#F64E60"
            android:textColorHighlight="#F64E60"
            android:textSize="15sp" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btnstyle_inscrire"
            android:padding="8dp"
            android:text="@string/signup_button"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btnstyle"
            android:padding="8dp"
            android:text="@string/signup_login"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>